add docker env in mac

--- a/compose.yaml
+++ b/compose.yaml
@@ -3,11 +3,11 @@ x-common-volumes: &common-volumes
     - .:/projects
     - data_headquarters:/projects/datasets
 
-x-common-devices: &common-devices
+x-ubuntu-devices: &ubuntu-devices
   devices:
     - /dev/dri:/dev/dri
 
-x-common-envs: &common-envs
+x-ubuntu-envs: &ubuntu-envs
   environment:
     - UID=${UID:-1000}
     # - DISPLAY=unix$DISPLAY
@@ -19,9 +19,9 @@ x-common-envs: &common-envs
     - XAUTHORITY=/tmp/.docker.xauth
 
 services:
-  interview-env-ubuntu:
-    image: interview-env:ubuntu
-    container_name: interview-env-ubuntu
+  slam-learning-env-ubuntu:
+    image: slam-learning-env:ubuntu
+    container_name: slam-learning-env-ubuntu
     runtime: nvidia
     network_mode: "host"
     tty: true
@@ -32,12 +32,12 @@ services:
       args:
         - UID=${UID:-1000}
         - GID=${GID:-1000}
-        - BASE_IMAGE=cuda-ros-dev:11.8-noetic-conda
-    <<: [*common-volumes, *common-devices, *common-envs]
+        - BASE_IMAGE=osrf/ros:noetic-desktop-full
+    <<: [*common-volumes, *ubuntu-devices, *ubuntu-envs]
 
-  interview-env-mac:
-    image: interview-env:mac
-    container_name: interview-env-mac
+  slam-learning-env-mac:
+    image: slam-learning-env:mac
+    container_name: slam-learning-env-mac
     tty: true
     working_dir: /projects
     build:
@@ -46,7 +46,7 @@ services:
       args:
         - UID=${UID:-1000}
         - GID=${GID:-1000}
-        - BASE_IMAGE=ubuntu:20.04
+        - BASE_IMAGE=osrf/ros:noetic-desktop-full
     environment:
       - UID=${UID:-1000}
       - QT_X11_NO_MITSHM=1
