--- a/docker/Dockerfile.mac
+++ b/docker/Dockerfile.mac
@@ -4,7 +4,7 @@ FROM ${BASE_IMAGE} AS dev-base
 RUN sed -i 's/archive.ubuntu.com/mirrors.tuna.tsinghua.edu.cn/g' /etc/apt/sources.list
 ENV TZ=Asia/Shanghai DEBIAN_FRONTEND=noninteractive
 
-RUN apt-get update && \ 
+RUN apt-get update && \
     apt-get install -y tzdata vim git zsh build-essential sudo apt-utils cmake \
                        wget curl gdb gdbserver tree tig && \
     rm -rf /var/lib/apt/lists/*
@@ -12,6 +12,11 @@ RUN apt-get update && \
 RUN apt-get update -y && \
     apt-get install -y libeigen3-dev python3 python3-dev python3-pip libopencv-dev python3-opencv \
                        libomp-dev libyaml-cpp-dev libboost-all-dev libpcl-dev && \
+    rm -rf /var/lib/apt/lists/*
+
+RUN apt-get update -y && \
+    apt-get install -y ros-noetic-pcl-ros ros-noetic-velodyne-msgs libbtbb-dev libgmock-dev libgoogle-glog-dev \
+                       libeigen3-dev libsuitesparse-dev libpcl-dev libyaml-cpp-dev && \
     rm -rf /var/lib/apt/lists/*
 
 FROM dev-base AS  build-env
@@ -22,5 +27,5 @@ RUN /opt/install_spdlog.sh
 COPY docker/install/install_ohmyzsh.sh /opt/
 RUN CHSH=yes RUNZSH=yes KEEP_ZSHRC=yes sh /opt/install_ohmyzsh.sh
 
-COPY docker/install/requirements.txt /opt/
-RUN pip install -r /opt/requirements.txt
+#COPY docker/install/requirements.txt /opt/
+#RUN pip install -r /opt/requirements.txt
